--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-    <title>Canvas demo</title>
+    <title>AI4-code</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -13,9 +14,15 @@
     <textarea type="text" id="my_order" name="my_order" cols="60" rows="4"></textarea>
     <br><br>
 
-    <canvas id="canvas" width="800" height="2500" style="border: 1px solid black;">
-    </canvas>
-    <p id="clear">clear</p>
+    <div class="row">
+        <div class="column">
+            <canvas id="canvas" width="800" height="2500">
+            </canvas>
+        </div>
+        <div class="column">
+            <p id="cur_source" >Some text</p>
+        </div>
+    </div>
     <script src="dist/main.js"></script>
 </body>
 
