add vizualizer README

--- a/viz/index.html
+++ b/viz/index.html
@@ -16,6 +16,13 @@
 
     <div class="row">
         <div class="column">
+            <div>
+                <p>Blue lines - markdowns cells.
+                Black lines - code cells.
+                Left - correct pos.
+                Right - my pos.
+                Try to click on lines (near the edge).</p>
+            </div>
             <canvas id="canvas" width="800" height="2500">
             </canvas>
         </div>
