show all code cells in viz

--- a/viz/index.html
+++ b/viz/index.html
@@ -16,7 +16,7 @@
 
     <table>
         <tr>
-            <td style="width: 50%;">
+            <td style="width: 50%; vertical-align:top">
                 <div>
                     <p>Blue lines - markdowns cells.
                     Black lines - code cells.
@@ -27,8 +27,8 @@
                 <canvas id="canvas" width="800" height="2500">
                 </canvas>
             </td>
-            <td style="width: 50%;">
-                <p id="cur_source" style="background-color:rgb(219, 247, 251); border-radius: 25px; padding: 15px;" >Some text</p>
+            <td style="width: 50%; vertical-align:top" id="cells_list">
+                <pre id="cur_source" style="background-color:rgb(219, 247, 251); border-radius: 25px; padding: 15px; white-space: pre-wrap;" >Some text</pre>
             </td>
         </tr>
     </table>
